feat(header): add desktop header

--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">    <title>Document</title>
 </head>
 
 
 <body>
 
     <header>
+        <div class="logo">
+            <img src="/asset/Vector.svg" alt="Logo">
+            <span>Jk developer</span>
+        </div>
         <nav>
-            
+            <div>About us</div>
+            <div>Services</div>
+            <div>Case studies</div>
+            <div>Blog</div>
+            <div>How it works</div>
+            <div>Hire</div>
         </nav>
+        <button class="contact_btn">Contact us</button>
     </header>
     
 </body>
