feat(header) : add phone header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img src="/asset/Vector.svg" alt="Logo">
             <span>Jk developer</span>
         </div>
+
         <nav>
             <div>About us</div>
             <div>Services</div>
@@ -25,7 +26,12 @@
             <div>How it works</div>
             <div>Hire</div>
         </nav>
+
         <button class="contact_btn">Contact us</button>
+        
+        <div class="menu">
+            <img src="/asset/menu.svg" alt="hamburger menu" height="45px">
+        </div>
     </header>
     
 </body>
