feat(index): start introduction card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="logo">
-            <img src="/asset/Vector.svg" alt="Logo">
+            <img src="/asset/logo.svg" alt="Logo">
             <span>Jk developer</span>
         </div>
 
@@ -28,12 +28,23 @@
         </nav>
 
         <button class="contact_btn">Contact us</button>
-        
+
         <div class="menu">
             <img src="/asset/menu.svg" alt="hamburger menu" height="45px">
         </div>
     </header>
     
+    <div class="introduction">
+        <div>
+            <p>Great <span>Product</span> is built by great <span>teams</span></p>
+            <p><br> We help build and manage a team of wolrd-class developers to bring your vision to life</p>
+            <button class="intro_btn">Let's get started!</button>
+        </div>
+        <div>
+            <img src="asset/web-development.png" alt="image_intro">
+        </div>
+    </div>
+
 </body>
 
 
