feat(index): introduction card done

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <div class="introduction">
         <div>
-            <p>Great <span>Product</span> is built by great <span>teams</span></p>
-            <p><br> We help build and manage a team of wolrd-class developers to bring your vision to life</p>
+            <p>Great <span>Product</span> is <span><br>built by great</span> <span>teams</span></p>
+            <p>We help build and manage a team of wolrd-class developers to bring your vision to life</p>
             <button class="intro_btn">Let's get started!</button>
         </div>
         <div>
