feat(index): start services card

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
         </div>
     </div>
 
+    <img class="circle" src="/asset/circle.svg" alt="circle">
+
+    <div class="Services">
+        <div class="card">
+            <div>Mobile App Development</div>
+            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p>.</div>
+        </div>
+        <div class="card">
+            <div>Web Design & Development</div>
+            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+        </div>
+        <div class="card">
+            <div>Software Testing Service</div>
+            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+        </div>
+    </div>
+
 </body>
 
 
