feat(index): services card done

--- a/index.html
+++ b/index.html
@@ -45,22 +45,46 @@
         </div>
     </div>
 
-    <img class="circle" src="/asset/circle.svg" alt="circle">
+    <img class="circle" src="/asset/Ellipse 180.svg" alt="circle">
 
-    <div class="Services">
-        <div class="card">
-            <div>Mobile App Development</div>
-            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p>.</div>
+
+    <div class="services_container">
+        <h1>Services we offer</h1>
+        <div class="services">
+            <div class="card">
+                <img src="/asset/icone-dev.png" alt="icone">
+                <div><h3> Mobile App Development</h3></div>
+                <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p>.</div>
+            </div>
+            <div class="card">
+                <img src="/asset/icone-mobile.svg" alt="icone">
+                <div><h3> Web Design & Development</h3></div>
+                <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+            </div>
+            <div class="card">
+                <img src="/asset/icone-dev.png" alt="icone">
+                <div><h3> Software Testing Service</h3></div>
+                <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+            </div>
+            <div class="card">
+                <img src="/asset/icone-software.png" alt="icone">
+                <div><h3>Software Testing Service</h3></div>
+                <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+            </div>
+            <div class="card">
+                <img src="/asset/icone-dev.png" alt="icone">
+                <div><h3>Software Testing Service</h3></div>
+                <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+            </div>
+
         </div>
-        <div class="card">
-            <div>Web Design & Development</div>
-            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
-        </div>
-        <div class="card">
-            <div>Software Testing Service</div>
-            <div><p>A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.</p></div>
+        <div class="carousel">
+            <img src="#" alt="" height="18px" width="185px" style="visibility: hidden;">
+            <img src="/asset/Carousel-nodes.png" alt="Carousel" height="18px" width="102px">
+            <img src="/asset/slider.png" alt="Carousel_slider" height="15px">
         </div>
     </div>
+    <img class="circle_2" src="/asset/Ellipse 180.svg" alt="circle">
 
 </body>
 
