feat(index): add information card

--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
     </div>
     <img class="circle_2" src="/asset/Ellipse 180.svg" alt="circle">
 
+    <div class="informations_container">
+        <div class="Information">
+
+            <div class="text">
+                <img src="/asset/Deco-line.svg" alt="line">
+                <h4>Leading companies trust us <b>to develop software</b></h4>
+                <p>We <span>add development capacity</span> to tech teams. Our value isn’t limited to
+                building teams but is equally distributed across the project lifecycle.
+                We are a custom software development company that guarantees the successful
+                delivery of your project.</p>
+            </div>
+            <div class="see_more">
+                <span>See more Informations</span>
+                <img src="/asset/arrow.png" alt="arrow">
+            </div>
+                
+        </div>
+
+        <div>
+            <img src="/asset/video_info.png" alt="video_info">
+        </div>
+
+    </div>
+
 </body>
 
 
