--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
         </div>
 
         <div>
-            <img src="/asset/video_info.png" alt="video_info">
+            <img id="video" src="/asset/video_info.png" alt="video_info">
         </div>
 
     </div>
 
-    
+
 
 </body>
 
