feat(index): add shadows on services

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 
     </div>
 
+    <div>Meet the People<br>We are Working With</div>
+    <div>
+        <img src="/asset/Btn-left.png" alt="left button">
+        <img src="/asset/Btn-right.png" alt="right button">
+    </div>
 
 
 </body>
