feat(index):add partner card

--- a/index.html
+++ b/index.html
@@ -110,12 +110,21 @@
 
     </div>
 
-    <div>Meet the People<br>We are Working With</div>
-    <div>
-        <img src="/asset/Btn-left.png" alt="left button">
-        <img src="/asset/Btn-right.png" alt="right button">
+    
+    <div class="partner">
+        <img src="/asset/Deco-line.svg" alt="line">
+        <p><span>Meet the People</span><br><b>We are Working With</b></p>
     </div>
 
+    <div class="btn_arrow">
+        <img src="/asset/arrow.png" alt="arrow_button">
+        <img src="/asset/arrow.png" alt="arrow_button" style="color: white;">
+    </div>
+
+    <img class="circle_3" src="/asset/Ellipse 180.svg" alt="circle">
+    <div class="partner_carousel">
+        <img src="asset/Partner.svg" alt="partner">
+    </div>
 
 </body>
 
