feat(index): start review card

--- a/index.html
+++ b/index.html
@@ -126,6 +126,34 @@
         <img src="asset/Partner.svg" alt="partner">
     </div>
 
+    <div class="reviews_container">
+        <div>
+            <div class="reviews">
+                <div class="reviews_comment">
+                    <div><h2>Why cutomers love <br> <b>working with us</b></h2></div>
+
+                        <div>
+                            <p><img src="/asset/quote.svg" alt="quotation mark">Without any doubt I recommend Alcaline Solutions as one of the best web design 
+                            and digital marketing agencies. 
+                            One of the best agencies I’ve came across so far. 
+                            Wouldn’t be hesitated to introduce their work to someone else.<img src="/asset/quote.svg" alt="quotation mark"></p>
+                        </div>
+
+                </div>
+
+                <div>
+                    <img src="/asset/client.svg" alt="client_reviews">
+                </div>
+            </div>
+
+            <div class="reviews_arrow">
+                <img src="/asset/arrow.png" alt="arrow">
+                <img src="/asset/arrow.png" alt="arrow">
+            </div>
+            
+        </div>
+    </div>
+
 </body>
 
 
