feat(index): start portfolio card

--- a/index.html
+++ b/index.html
@@ -154,6 +154,58 @@
         </div>
     </div>
 
+    <div class="portfolio_container">
+        <div class="portfolio_header">
+            <img src="/asset/Deco-line.svg" alt="line">
+            <div>Our recent <br> <b>Case studies</b></div>
+        </div>
+
+        <div class="portfolio">
+            <div class="p_card">
+                <div>
+                    <img src="/asset/Case-study.png" alt="#">
+                </div>
+                <div class="p_text" style="background-color: #f2f3ff;">
+                    <div>Website Design for SCFC Canada</div>
+                    <div>Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.</div>
+                    <div class="read_more">
+                        <div >Read more</div>
+                        <div><img src="/asset/arrow.png" alt="arrow"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="p_card">
+                <div>
+                    <img src="/asset/Case-study01.png" alt="#">
+                </div>
+                <div class="p_text" style="background-color: #f0fff7;">
+                    <div>Website Design for SCFC Canada</div>
+                    <div>Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.</div>
+                    <div class="read_more">
+                        <div>Read more</div>
+                        <div><img src="/asset/arrow.png" alt="arrow"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="p_card">
+                <div>
+                    <img src="/asset/Case-study02.png" alt="#">
+                </div>
+                <div>
+                    <div class="p_text" style="background-color: #fff5f5;">
+                        <div>Website Design for SCFC Canada</div>
+                    <div>Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.</div>
+                    <div class="read_more">
+                        <div>Read more</div>
+                        <div><img src="/asset/arrow.png" alt="arrow"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
 </body>
 
 
