feat(index): start development card

--- a/index.html
+++ b/index.html
@@ -214,18 +214,54 @@
             <img src="/asset/Deco-line.svg" alt="#">
             <p>Our design and <br><b>development approach</b></p>
         </div>
+
         <div>
             <div>
                 <div class="development_card">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+
+                    <div class="development_column1">
+                        <div>
+                            <div>
+                                <img src="/asset/develop_rocket.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="/asset/develop_Heart.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>                    
+                            <div>
+                                <img src="/asset/develop_Success.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+
+                    <div class="development_column2">
+                        <div>           
+                            <div>
+                                <img src="asset/develop_Code.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>                
+                            <div>
+                                <img src="asset/develop_Shield.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>              
+                            <div>
+                                <img src="asset/develop_Padlock.png" alt="">
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
+
     </div>
 
 
