--- a/index.html
+++ b/index.html
@@ -210,32 +210,39 @@
     </div>
 
     <div class="development_container">
-        <div>
-            <img src="/asset/Deco-line.svg" alt="#">
-            <p>Our design and <br><b>development approach</b></p>
-        </div>
+
 
         <div>
             <div>
                 <div class="development_card">
+
+
+                    <div>
+                        <img class="deco-line" src="/asset/Deco-line.svg" alt="#">
+                        <p>Our design and <br><b>development approach</b></p>
+                    </div>
 
                     <div class="development_column1">
                         <div>
                             <div>
                                 <img src="/asset/develop_rocket.png" alt="">
                             </div>
-                            <div></div>
+                            <h2>UX Driven Engineering</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
                         </div>
                         <div>
                             <div>
                                 <img src="/asset/develop_Heart.png" alt="">
                             </div>
-                            <div></div>
-                        </div>                    
+                            <h2>Proven experience and Expertise</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
+                        </div>
+                        <div>                    
                             <div>
                                 <img src="/asset/develop_Success.png" alt="">
                             </div>
-                            <div></div>
+                            <h2>Code Review</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
                         </div>
                     </div>
 
@@ -244,17 +251,22 @@
                             <div>
                                 <img src="asset/develop_Code.png" alt="">
                             </div>
-                            <div></div>
-                        </div>                
+                            <h2>Developing Shared Understanding</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
+                        </div> 
+                        <div>               
                             <div>
                                 <img src="asset/develop_Shield.png" alt="">
                             </div>
-                            <div></div>
-                        </div>              
+                            <h2>Security & Intellectual Property (IP)</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
+                        </div>    
+                        <div>          
                             <div>
                                 <img src="asset/develop_Padlock.png" alt="">
                             </div>
-                            <div></div>
+                            <h2>Quality Assurance & Testing</h2>
+                            <div>Unlike other companies, we are a UX first development company. Projects are driven by designers and they make sure design and experiences translate to code</div>
                         </div>
                     </div>
 
