feat(index): add a div to portfolio

--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
                 </div>
             </div>
 
+            <div class="read_more_case">
+                <div>
+                    <p>Read more case studies</p>
+                    <img src="/asset/arrow.png" alt="arrow">
+                </div>
+            </div>
+            
         </div>
 
     </div>
@@ -214,13 +221,15 @@
 
         <div>
             <div>
+                
+                <div class="deco-line">
+                    <img src="/asset/Deco-line.svg" alt="#">
+                    <p>Our design and <br><b>development approach</b></p>
+                </div>
+
+
                 <div class="development_card">
 
-
-                    <div>
-                        <img class="deco-line" src="/asset/Deco-line.svg" alt="#">
-                        <p>Our design and <br><b>development approach</b></p>
-                    </div>
 
                     <div class="development_column1">
                         <div>
