feat(index): phone page done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -172,10 +173,11 @@
         </div>
 
         <div class="portfolio">
+            
             <div class="p_card" style="background-color: #f2f3ff;">
 
                 <div class="p_card_img">
-                    <img src="/asset/Case-study.png" alt="#" height="100%">
+                    <img src="/asset/Case-study.png" alt="#" height="auto" width="100%">
                 </div>
                 <div class="p_text" >
                     <div><h1>Website Design for SCFC Canada</h1></div>
